<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.p2pdinner.activities.FoodAndSafetyActivity">

    <TextView
        android:id="@+id/food_safety"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/government_warning"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_margin="10dp" />

    <ImageView
        android:id="@+id/photo1"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:contentDescription="@string/add_photo"
        android:src="@drawable/add_photo"
        android:scaleType= "fitXY"
        android:adjustViewBounds="true"
        android:layout_margin="10dp"
        android:layout_below="@id/food_safety"/>

    <ImageView
        android:id="@+id/photo2"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_toRightOf="@+id/photo1"
        android:contentDescription="@string/add_photo"
        android:src="@drawable/add_photo"
        android:layout_margin="10dp"
        android:layout_below="@id/food_safety" />

    <ImageView
        android:id="@+id/photo3"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_below="@+id/photo1"
        android:contentDescription="@string/add_photo"
        android:src="@drawable/add_photo"
        android:layout_margin="10dp"
        />

    <ImageView
        android:id="@+id/photo4"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_toRightOf="@+id/photo3"
        android:layout_below="@+id/photo2"
        android:contentDescription="@string/add_photo"
        android:src="@drawable/add_photo"
        android:layout_margin="10dp" />

    <Button
        android:id="@+id/btnGoSell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/gosell"
        android:textColor="@color/background_material_light"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/uploadProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:indeterminate="true"/>

</RelativeLayout>
