<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.p2pdinner.activities.FindDinnerActivity">

    <LinearLayout
        android:id="@+id/location_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/location_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:maxHeight="40dp"
            android:maxWidth="40dp"
            android:src="@drawable/location1x" />

        <RelativeLayout
            android:id="@+id/address_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <EditText
                android:id="@+id/current_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp" />

            <TextView
                android:id="@+id/start_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/current_address"
                android:layout_gravity="center"
                android:layout_marginRight="3dp"
                android:text="@string/search_near_address" />

        </RelativeLayout>
    </LinearLayout>


    <View
        android:id="@+id/separator1"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/location_layout"
        android:layout_centerVertical="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_orange_dark" />

    <RelativeLayout
        android:id="@+id/guests_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separator1">

        <LinearLayout
            android:id="@+id/guests_static_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/group_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxHeight="40dp"
                android:maxWidth="40dp"
                android:src="@drawable/group1x" />

            <TextView
                android:id="@+id/guest_numbers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="3dp"
                android:text="2" />

            <TextView
                android:id="@+id/lbl_guests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/labelGuest" />

            <RelativeLayout
                android:id="@+id/btns_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/decrement_guests"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/increment_guests"
                    android:text="@string/minus"
                    android:textColor="@color/background_material_light"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/increment_guests"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/plus"
                    android:textColor="@color/background_material_light"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>


    <View
        android:id="@+id/separator2"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/guests_layout"
        android:layout_centerVertical="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_orange_dark" />

    <RelativeLayout
        android:id="@+id/calendar_static_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separator2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/calendar_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/separator2"
                android:layout_marginRight="3dp"
                android:adjustViewBounds="true"
                android:maxHeight="40dp"
                android:maxWidth="40dp"
                android:src="@drawable/calender1x" />

            <TextView
                android:id="@+id/lbl_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/labelToday" />

            <RelativeLayout
                android:id="@+id/icon_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/changeDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:adjustViewBounds="true"
                    android:maxHeight="40dp"
                    android:maxWidth="40dp"
                    android:src="@drawable/arrow_round" />
            </RelativeLayout>


        </LinearLayout>

    </RelativeLayout>

    <View
        android:id="@+id/separator3"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/calendar_static_layout"
        android:layout_centerVertical="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_orange_dark" />

    <Button
        android:id="@+id/btnFindDinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/finddinner"
        android:textColor="@color/background_material_light"
        android:textSize="16sp"
        android:textStyle="bold" />
    <ProgressBar
        android:id="@+id/searchProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:indeterminate="true"/>
</RelativeLayout>

