<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="100"
    tools:context="com.p2pdinner.activities.DinnerListingDetailActivity">

    <ImageView
        android:id="@+id/food_images"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxHeight="200dp"
        android:maxWidth="200dp"
        android:src="@drawable/add_photo" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/food_images"
        android:padding="5dp"
        android:text="Vegetable Biriyani"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/abc_text_size_subtitle_material_toolbar"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/profilename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:padding="5dp"
        android:text="Molly's Home, 1.3 mi"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/abc_text_size_subtitle_material_toolbar"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profilename"
        android:padding="5dp"
        android:text="680 2nd Street, San Francisco"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/abc_text_size_small_material"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/cost_per_plate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignRight="@+id/profilename"
        android:layout_below="@+id/food_images"
        android:padding="10dp"
        android:text="$4.95"
        android:textColor="#df731a"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/timings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address"
        android:paddingLeft="5dp"
        android:text="Serving between 8:30 PM - 9:45 PM"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/abc_text_size_small_material"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_special_needs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timings"
        android:paddingLeft="5dp"
        android:text="Vegetrian"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/abc_text_size_small_material"
        android:textStyle="bold" />


    <GridView
        android:id="@+id/deliveryOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_special_needs"
        android:columnWidth="40dp"
        android:gravity="center"
        android:horizontalSpacing="2dp"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:verticalSpacing="2dp" />


    <TextView
        android:id="@+id/labelDinners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deliveryOptions"
        android:layout_centerVertical="true"
        android:padding="5dp"
        android:text="Dinners"
        android:textAlignment="center"
        android:textColor="#df731a"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/noOfGuests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deliveryOptions"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/labelDinners"
        android:padding="5dp"
        android:text="2"
        android:textAlignment="center"
        android:textColor="#df731a"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/decrement_plates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deliveryOptions"
        android:layout_toEndOf="@+id/noOfGuests"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/minus"
        android:textColor="@color/background_material_light" />

    <Button
        android:id="@+id/increment_plates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deliveryOptions"
        android:layout_toEndOf="@+id/decrement_plates"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/plus"
        android:textColor="@color/background_material_light" />

    <TextView
        android:id="@+id/total_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/noOfGuests"
        android:layout_below="@+id/deliveryOptions"
        android:gravity="right"
        android:padding="5dp"
        android:text="$9.00"
        android:textAlignment="center"
        android:textColor="#df731a"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnBuy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="5dp"
        android:text="@string/buy_now"
        android:textSize="20dp"
        android:textColor="@color/background_material_light" />

    <!-- <ImageView
        android:id="@+id/delivery_types"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxHeight="40dp"
        android:maxWidth="40dp"
        android:layout_below="@+id/timings"
        android:src="@drawable/dinein" /> -->
</RelativeLayout>
